--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index page for repo</title>
-    <link rel="stylesheet" href="index.css"
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>HELLO WORLD!</h1>
