--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -8,6 +8,30 @@
     <link rel="stylesheet" href="index.css">    
 </head>
 <body>
-    
+    <header class="row">
+        Our Menu
+    </header>
+
+    <section class="col-lg-4 col-md-6 col-sm-12">
+        <p>Dal</p>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis voluptate culpa ratione, harum nemo nulla exercitationem minima laborum dignissimos deserunt alias laboriosam. 
+            Illo voluptatum ad, iure repellat harum consectetur aperiam!
+        </p>
+    </section>
+    <section class="col-lg-4 col-md-6 col-sm-12">
+        <p>Rice</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, optio. Nulla nobis laboriosam consectetur 
+            unde cumque voluptatum, iste quis alias minima, pariatur dolorem veniam natus molestias, mollitia ratione nostrum beatae?
+        </p>
+    </section>
+    <section class="col-lg-4 col-md-6">
+        <p>Chole</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt numquam nulla aliquid explicabo quo. Dolores repudiandae veritatis 
+            commodi repellendus eos! Vitae dolores animi repellendus omnis aspernatur alias id, possimus perspiciatis.
+        </p>
+    </section>
 </body>
 </html>
