Uploading the files

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solution for module 2 assignment</title>
-    <link rel="stylesheet" href="index.css">    
+    <link rel="stylesheet" href="./css/index.css">    
 </head>
 <body>
     <header class="row">
@@ -13,25 +13,31 @@
     </header>
 
     <section class="col-lg-4 col-md-6 col-sm-12">
-        <p>Dal</p>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis voluptate culpa ratione, harum nemo nulla exercitationem minima laborum dignissimos deserunt alias laboriosam. 
-            Illo voluptatum ad, iure repellat harum consectetur aperiam!
-        </p>
+        <div class="s">
+            <p class="sh" id="st1">Dal</p>
+            <p class="content">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis voluptate culpa ratione, harum nemo nulla exercitationem minima laborum dignissimos deserunt alias laboriosam. 
+                Illo voluptatum ad, iure repellat harum consectetur aperiam!
+            </p>
+        </div>
     </section>
     <section class="col-lg-4 col-md-6 col-sm-12">
-        <p>Rice</p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, optio. Nulla nobis laboriosam consectetur 
-            unde cumque voluptatum, iste quis alias minima, pariatur dolorem veniam natus molestias, mollitia ratione nostrum beatae?
-        </p>
+        <div class="s">
+            <p class="sh" id="st2">Rice</p>
+            <p class="content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, optio. Nulla nobis laboriosam consectetur 
+                unde cumque voluptatum, iste quis alias minima, pariatur dolorem veniam natus molestias, mollitia ratione nostrum beatae?
+            </p>
+        </div>
     </section>
-    <section class="col-lg-4 col-md-6">
-        <p>Chole</p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt numquam nulla aliquid explicabo quo. Dolores repudiandae veritatis 
-            commodi repellendus eos! Vitae dolores animi repellendus omnis aspernatur alias id, possimus perspiciatis.
-        </p>
+    <section class="col-lg-4 col-md-6 col-sm-12">
+        <div class="s">
+            <p class="sh" id="st3">Chole</p>
+            <p class="content">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt numquam nulla aliquid explicabo quo. Dolores repudiandae veritatis 
+                commodi repellendus eos! Vitae dolores animi repellendus omnis aspernatur alias class, possimus perspiciatis.
+            </p>
+        </div>
     </section>
 </body>
 </html>
