--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solution for module 2 assignment</title>
-    <link rel="stylesheet" href="css/index.css">    
+    <link ref="@(Url.Content("path of css"))" rel="stylesheet" href="css/index.css">    
 </head>
 <body>
     <header class="row">
