--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solution for module 2 assignment</title>
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
-    <link rel="stylesheet" href="https://vishnupchopra.github.io/web-repo/module2-solution/css/index.css">    
+    <link rel="stylesheet" href="https://github.com/vishnupchopra/web-repo/blob/main/module2-solution/CSS/index.css">    
 </head>
 <body>
     <header class="row">
