--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header class="row">
-        Our Menu
+        Web Hosting
     </header>
 
     <section class="col-lg-4 col-md-6 col-sm-12">
         <div class="s">
-            <p class="sh" id="st1">Dal</p>
+            <p class="sh" id="st1">Vishnu Pratap Chopra</p>
             <p class="content">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis voluptate culpa ratione, harum nemo nulla exercitationem minima laborum dignissimos deserunt alias laboriosam. 
                 Illo voluptatum ad, iure repellat harum consectetur aperiam!
@@ -23,7 +23,7 @@
     </section>
     <section class="col-lg-4 col-md-6 col-sm-12">
         <div class="s">
-            <p class="sh" id="st2">Rice</p>
+            <p class="sh" id="st2">22BSA10042</p>
             <p class="content">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, optio. Nulla nobis laboriosam consectetur 
                 unde cumque voluptatum, iste quis alias minima, pariatur dolorem veniam natus molestias, mollitia ratione nostrum beatae?
@@ -32,7 +32,7 @@
     </section>
     <section class="col-lg-4 col-md-6 col-sm-12">
         <div class="s">
-            <p class="sh" id="st3">Chole</p>
+            <p class="sh" id="st3">CCA</p>
             <p class="content">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt numquam nulla aliquid explicabo quo. Dolores repudiandae veritatis 
                 commodi repellendus eos! Vitae dolores animi repellendus omnis aspernatur alias class, possimus perspiciatis.
